# RAG-MATCHER

./: .dockerignore  .env  .env.example  .gitignore  DEMO_FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_FIXES_SUMMARY.md  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
data/: mimic_iii_ddl.sql
data/gpt/: generate_data.py  uschema_variant_1.json  uschema_variant_10.json  uschema_variant_2.json  uschema_variant_3.json  uschema_variant_4.json  uschema_variant_5.json  uschema_variant_6.json  uschema_variant_7.json  uschema_variant_8.json  uschema_variant_9.json
data/rag/: augmentation_knowledge.py  gpt-augmentation.py  gpt-version-2.py  knowledge_base.jsonl  knowledge_base_enriched.jsonl  knowledge_base_enriched_phi3_version.jsonl  matching_result.jsonl  mimic_ddl.sql  mimic_dictionary.json  test-version.py  vector_store.data  vector_store.index
docs/: RAG_SYSTEM.md  RAG_VIRTUAL_RENAME.md
evaluation/manually/: main.ipynb  mapping_imputed.json  mapping_report.json  (+1 more)
examples/: rag_matching_example.py  run_rag_virtual_rename_demo.py  run_rvaluation_rag.py  source_uschema.json  tac-uschema.json  target_mimic.csv  test_rag_virtual_rename.py
scripts/: setup_rag_environment.py  setup_rag_system.py  setup_test_db.py  test-open-ai-api.py  test_demo_fixes.py  test_fixes.py  test_llm_purly.py  test_rag_generation.py  test_rag_pipeline.py  test_rag_with_llm.py  uschema.json  uschema_parsing.py  uschema_testdata.json  validate_rag_implementation.py  validate_rag_installation.py
visualisation/: main.ipynb
(+65 files in other folders)
